--- a/NavigationServices/appsettings.json
+++ b/NavigationServices/appsettings.json
@@ -3,31 +3,37 @@
     "NLDI": {
       "baseurl": "https://cida.usgs.gov",
       "resources": {
-        "nhdplusWFS": "/nwc/geoserver/nhdplus/ows?service=wfs&version=1.0.0&request=GetFeature&typeName=nhdplus:catchmentsp&srsName=EPSG:{0}&outputFormat=json&filter=<Filter xmlns=\"http://www.opengis.net/ogc\" xmlns:gml=\"http://www.opengis.net/gml\"><Contains><PropertyName>the_geom</PropertyName><gml:Point srsName=\"EPSG:{0}\"><gml:coordinates>{1},{2}</gml:coordinates></gml:Point></Contains></Filter>",
-        "nldiQuery": "/nldi/comid/{0}"
+        "nhdplusWFS": "/nwc/geoserver/nhdplus/ows?service=wfs&version=1.0.0&request=GetFeature&typeName=nhdplus:catchmentsp&srsName={0}&outputFormat=json&filter=<Filter xmlns=\"http://www.opengis.net/ogc\" xmlns:gml=\"http://www.opengis.net/gml\"><Contains><PropertyName>the_geom</PropertyName><gml:Point srsName=\"{0}\"><gml:coordinates>{1},{2}</gml:coordinates></gml:Point></Contains></Filter>",
+        "nldiQuery": "/nldi/comid/{0}/navigate/{1}"
       }
     },
+    "StreamStats": {
+        "baseurl": "https://streamstats.usgs.gov",
+        "resources": {
+          "fdirTrace": "/nldi/comid/{0}"
+        }
+      },
     "Networks": [
-      {
-        "ID": 1,
-        "Code": "flowpath",
-        "Name": "Flow (Raindrop) Path",
-        "Description": "Trace flow path of a specified point through the network."
-      },
-      {
-        "ID": 2,
-        "Code": "networkpath",
-        "Name": "Network Path",
-        "Description": "Network Path Description."
-      },
-      {
-        "ID": 3,
-        "Code": "networktrace",
-        "Name": "Network Trace",
-        "Description": "Network trace Description."
-      }
-    ]
-  },
+        {
+          "ID": 1,
+          "Code": "flowpath",
+          "Name": "Flow (Raindrop) Path",
+          "Description": "Trace flow path of a specified point through the network."
+        },
+        {
+          "ID": 2,
+          "Code": "networkpath",
+          "Name": "Network Path",
+          "Description": "Network Path Description."
+        },
+        {
+          "ID": 3,
+          "Code": "networktrace",
+          "Name": "Network Trace",
+          "Description": "Network trace Description."
+        }
+      ]
+    },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
