Finished hooking up msg and analytics, and finished network trace

--- a/NavigationServices/appsettings.json
+++ b/NavigationServices/appsettings.json
@@ -4,7 +4,7 @@
       "baseurl": "https://cida.usgs.gov",
       "resources": {
         "nhdplusWFS": "/nwc/geoserver/nhdplus/ows?service=wfs&version=1.0.0&request=GetFeature&typeName=nhdplus:catchmentsp&srsName={0}&outputFormat=json&filter=<Filter xmlns=\"http://www.opengis.net/ogc\" xmlns:gml=\"http://www.opengis.net/gml\"><Contains><PropertyName>the_geom</PropertyName><gml:Point srsName=\"{0}\"><gml:coordinates>{1},{2}</gml:coordinates></gml:Point></Contains></Filter>",
-        "nldiQuery": "/nldi/comid/{0}/navigate/{1}"
+        "nldiQuery": "/nldi/comid/{0}/navigate/{1}?distance={2}"
       }
     },
     "StreamStats": {
@@ -34,7 +34,7 @@
       }
     ]
   },
-  "AnalyticsKey": "UA-108310779-1",
+  "AnalyticsKey": "UA-61219868-26",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
