--- a/NavigationAgent/NavigationAgent.csproj
+++ b/NavigationAgent/NavigationAgent.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.0.0" />
     <PackageReference Include="WiM.Hypermedia" Version="1.1.0" />
     <PackageReference Include="WiM.Resources" Version="1.1.0" />
+    <PackageReference Include="WiM.Spatial" Version="1.0.0" />
     <PackageReference Include="WiM.Utilities.ServiceAgent" Version="1.1.2" />
   </ItemGroup>
 
