Add descriptions to network path and trace

--- a/NavigationServices/appsettings.json
+++ b/NavigationServices/appsettings.json
@@ -24,13 +24,13 @@
         "ID": 2,
         "Code": "networkpath",
         "Name": "Network Path",
-        "Description": "Network Path Description."
+        "Description": "Trace relations between 2 specified points through the network."
       },
       {
         "ID": 3,
         "Code": "networktrace",
         "Name": "Network Trace",
-        "Description": "Network trace Description."
+        "Description": "Upstream or downstream network trace to identify available data selections, such as gages, dams, and/or water quality sites, etc."
       }
     ]
   },
