--- a/NavigationAgent/NavigationAgent.csproj
+++ b/NavigationAgent/NavigationAgent.csproj
@@ -1,16 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GeoJSON.Net" Version="1.1.70" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.1" />
-    <PackageReference Include="WiM.Hypermedia" Version="1.1.1" />
-    <PackageReference Include="WiM.Resources" Version="1.1.1" />
-    <PackageReference Include="WiM.Spatial" Version="1.1.0" />
-    <PackageReference Include="WiM.Utilities.ServiceAgent" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="GeoJSON.Net" Version="1.1.72" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
+    <PackageReference Include="WiM.Hypermedia" Version="1.1.3" />
+    <PackageReference Include="WiM.Resources" Version="1.2.2" />
+    <PackageReference Include="WiM.Spatial" Version="1.1.1" />
+    <PackageReference Include="WiM.Utilities.ServiceAgent" Version="1.1.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NavigationDB\NavigationDB.csproj" />
   </ItemGroup>
 
 </Project>
