--- a/NavigationServices/appsettings.json
+++ b/NavigationServices/appsettings.json
@@ -45,12 +45,28 @@
           "rel": "Navigation Resource",
           "Href": "Navigation",
           "method": "GET"
-        }
-      },
-      "CodeOrID": {
-        "Description": "Unique resource code or identifier, used for identifying unique resource."
-      }
-    }
+        },
+        "x": {
+          "Description": "x location in deximal degrees WGS 84 coordinate system.",
+          "link": {
+            "rel": "WGS 84",
+            "Href": "https://spatialreference.org/ref/epsg/wgs-84/",
+            "method": "GET"
+          },
+          "y": {
+            "Description": "Configuration options produced from navigation resource request. Must be populated and resubmitted within requesting body.",
+            "link": {
+              "rel": "WGS 84",
+              "Href": "https://spatialreference.org/ref/epsg/wgs-84/",
+              "method": "GET"
+            },
+            "featureid": {
+              "Description": "NHD plus feature id. Also known as catchment id or COMID."
+             },
+            "CodeOrID": {
+              "Description": "Unique resource code or identifier, used for identifying unique resource."
+            }
+          }
   },
   "Logging": {
     "IncludeScopes": false,
