modifies NavigationAgent to keep first reach in list

--- a/NavigationDB/NavigationDB.csproj
+++ b/NavigationDB/NavigationDB.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <UserSecretsId>d583e88b-ba4d-4d14-bfe9-4b0cf16ac96d</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
